# OsAR

./: .eslintrc  .gitignore  .prettierrc  CMakeLists.txt  LICENSE  README.md  aaaaaaaa.txt  bino.py  brute_force.py  calibration.pkl  calibration.py  cameraMatrix.pkl  cha.py  dist.pkl  getImages.py  install_dependency.txt  main.cpp  main.py  newCameraMatrix.pkl  package-lock.json  package.json  ster.py  temp.txt  test.py  utils.py
.github/: dependabot.yml
.github/workflows/: build-web-demo.yml
ARucoMarker/: CMakeLists.txt  README.md  aruco.cpp  demo.cpp
CameraModule/Camera/: AspectRatioViewInterface.java  CameraFrames.java  ManageExternalCamera.java  R100PermissionListener.java  R100PermissionManager.java  SimpleUVCCameraTextureView.java
CameraModule/libuvccamera/: build.gradle
CameraModule/libuvccamera/src/main/: AndroidManifest.xml
CameraModule/libuvccamera/src/main/jni/: Application.mk
IMUDataFatching/: Callback.java  MobileIMUData.java
MakingSoFiles/: CMakelists.txt  temp  test
MakingSoFiles/include/: aruco.hpp  log.hpp
MakingSoFiles/old/: CMakelists.txt  CMakelistsworking.txt
MakingSoFiles/src/: aruco.cpp  demo.cpp  log.cpp
Python/: Readme.md  at_an_inclination.py  cam_akaze.py  precomputer.py  temp2.py
Python/AruCO/: detect_aruco_video.py  pose_estimation.py
TestingSoFiles/: settings.gradle
TestingSoFiles/app/: build.gradle
TestingSoFiles/app/src/main/: AndroidManifest.xml
TestingSoFiles/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
